+ Movie renamer: complete rewrite - CHECK YOUR RENAMER SETTINGS!
+ Movie renamer: possible to "downgrade" a movie, when having no distinct folder. (CHECK YOUR FOLDER RENAMER SETTINGS!)
+ added sort option via sort title 
+ added an option to name the episode thumbs without the -thumb postfix (improves compatibility for different media players)
x changed detection of DTS-HD codecs (Kodi will display the right logo now after NFO export)
x fixed multichannel AAC detection
x added a warning message when doing an update data source and no data source specified 
x renamer: exchange colon with a dash. (even better than removing completely)
x subtitles: language detection for SUB ones
x the NFO files has not been updated in some cases
x TheTvDB search cleans out too much "special" characters
x fixed occasional UI glitches with TV shows
x various smaller fixes

Version 2.6.6
=======================
+ updated trakt.tv library to the new API
  IMPORTANT: please re-enter your login data for trakt.tv
  
+ new sort order for movies: video bit rate
+ bulk editing of media source for movies
+ added rating column to the movie table
+ double click in movie set/TV show tree opens the editor
+ added a message history window (menu tools - show message history)
+ added filter option for year (movie)
x reworked NFO naming. Now be able to add NFO inside DISC folders separately
x fixed the season template in the TV show renamer
x fixed renamer (movie & tv shows) for case insensitive file systems
x better rewriting of movie NFO after movie set editing
x HDRIP is now being recognized as BluRay (more common source than TV)
x change writing of .desktop files for linux
x fixed OSX app (now tinyMediaManager is launch able without Java 6)
x bad words are now checked case insensitive
x fixed search score calculation for tmdb/rottentomatoes scraper
x enhanced NFO parsing to be more tolerant
x fixed subtitle writing for Kodi NFOs
x improved loading of mediainfo on network shares